src/objects/SPE_PlanKPIMap__c.object
<CustomObject>
    <fields>
        <fullName>CMTicket__c</fullName>
        <label>CM Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>Develop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watchlist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KPIScoreThreshold__c</fullName>
        <label>KPI Score Threshold</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>SPE Plan KPI Maps</relationshipLabel>
        <relationshipName>SPE_Plan_KPI_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodRange__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Period Range</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPEPlan__c</fullName>
        <label>SPE Plan</label>
        <referenceTo>SPE_SPEPlan__c</referenceTo>
        <relationshipLabel>SPE Plan KPI Maps</relationshipLabel>
        <relationshipName>SPE_Plan_KPI_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SPE Plan KPI Map</label>
    <nameField>
        <displayFormat>SPK-{000000}</displayFormat>
        <label>SPE Plan KPI Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE Plan KPI Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>